updated the spacing issue, optimize iphone 14 pro max by seperate the compentencies container

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -106,7 +106,7 @@
       font-size: 2rem;
     }
     .text-container {
-      text-align: justify;
+      text-align: left;
     }
     
   }
